--- a/src/alerts/resourceKeys.properties
+++ b/src/alerts/resourceKeys.properties
@@ -1,3 +1,3 @@
 ErrorTitle=Error
 CommandHeaderError=Error in executing command
-CommandMessageError=Invalid Command In This Language
+CommandMessageError=Invalid sequence, could not be run
