better error messages, fixed resetTurtle

--- a/src/alerts/resourceKeys.properties
+++ b/src/alerts/resourceKeys.properties
@@ -1,3 +1,6 @@
 ErrorTitle=Error
 CommandHeaderError=Error in executing command
-CommandMessageError=Invalid sequence, could not be run
+CommandMessageError1=Invalid syntax, could not be run
+CommandMessageError2=Could not find command
+VariableHeaderError=Invalid variable
+VariableMessageError=Could not find variable
