Added help menu that links to website

--- a/src/alerts/resourceKeys.properties
+++ b/src/alerts/resourceKeys.properties
@@ -4,3 +4,4 @@ CommandMessageError1=Invalid syntax, could not be run
 CommandMessageError2=Could not find command
 VariableHeaderError=Invalid variable
 VariableMessageError=Could not find variable
+URLMessageError=Could not link to commands webpage
