got rid of comments

--- a/src/alerts/resourceKeys.properties
+++ b/src/alerts/resourceKeys.properties
@@ -1,7 +1,10 @@
 ErrorTitle=Error
 CommandHeaderError=Error in executing command
+CommandHeaderError2=Error in defining command
 CommandMessageError1=Invalid syntax, could not be run
 CommandMessageError2=Could not find command
+CommandMessageError3=Command name is a default command
+CommandMessageError4=Unmatched number of brackets
 VariableHeaderError=Invalid variable
 VariableMessageError=Could not find variable
 URLMessageError=Could not link to commands webpage
