less double erros

--- a/src/alerts/resourceKeys.properties
+++ b/src/alerts/resourceKeys.properties
@@ -1,6 +1,7 @@
 ErrorTitle=Error
 CommandHeaderError=Error in executing command
 CommandHeaderError2=Error in defining command
+CommandHeaderError3=Undefined command
 CommandMessageError1=Invalid syntax, could not be run
 CommandMessageError2=Could not find command
 CommandMessageError3=Command name is a default command
