--- a/src/parser/CommandParametersMapping.properties
+++ b/src/parser/CommandParametersMapping.properties
@@ -17,11 +17,11 @@ ClearScreen = 0,Turtle
 #
 # Turtle Queries 
 #
-XCoordinate = 0,Turtle
-YCoordinate = 0,Turtle
-Heading = 0,Turtle
-IsPenDown = 0,Turtle
-IsShowing = 0,Turtle
+XCoordinate = 0,Control
+YCoordinate = 0,Control
+Heading = 0,Control
+IsPenDown = 0,Control
+IsShowing = 0,Control
 #
 # Math Operations 
 #
