recursion implemented (define command added)

--- a/src/parser/CommandParametersMapping.properties
+++ b/src/parser/CommandParametersMapping.properties
@@ -59,6 +59,7 @@ For = 2,Control
 If = 2,Control
 IfElse = 3,Control
 MakeUserInstruction = 3,Control
+Define = 2,Control
 #
 # Display Commands 
 #
