added alerts for calling undefined command

--- a/src/alerts/resourceKeys.properties
+++ b/src/alerts/resourceKeys.properties
@@ -6,6 +6,7 @@ CommandMessageError1=Invalid syntax, could not be run
 CommandMessageError2=Could not find command
 CommandMessageError3=Command name is a default command
 CommandMessageError4=Unmatched number of brackets
+CommandMessageError5=User-Defined Command Not Initialized After Its Parameter Definition
 VariableHeaderError=Invalid variable
 VariableMessageError=Could not find variable
 URLMessageError=Could not link to commands webpage
