working save button

--- a/src/alerts/resourceKeys.properties
+++ b/src/alerts/resourceKeys.properties
@@ -10,3 +10,4 @@ CommandMessageError5=User-Defined Command Not Initialized After Its Parameter De
 VariableHeaderError=Invalid variable
 VariableMessageError=Could not find variable
 URLMessageError=Could not link to commands webpage
+XMLSuccess=XML created successfully
