added group syntax

--- a/src/alerts/resourceKeys.properties
+++ b/src/alerts/resourceKeys.properties
@@ -7,6 +7,7 @@ CommandMessageError2=Could not find command
 CommandMessageError3=Command name is a default command
 CommandMessageError4=Unmatched number of brackets
 CommandMessageError5=User-Defined Command Not Initialized After Its Parameter Definition
+CommandMessageError6=Unmatched Number of Parameters for Unlimited Command
 VariableHeaderError=Invalid variable
 VariableMessageError=Could not find variable
 URLMessageError=Could not link to commands webpage
