Pen menu created

--- a/src/resources/colors/BluePalette.properties
+++ b/src/resources/colors/BluePalette.properties
@@ -1,5 +1,5 @@
 #
-# Variety of blue hues for default palette
+# Variety of blue hues for color palette
 #
 Blue = BLUE
 Cornflower = CORNFLOWERBLUE
