--- a/src/parser/CommandParametersMapping.properties
+++ b/src/parser/CommandParametersMapping.properties
@@ -14,6 +14,7 @@ ShowTurtle = 0,Turtle
 HideTurtle = 0,Turtle
 Home = 0,Turtle
 ClearScreen = 0,Turtle
+SetPenSize = 1,Turtle
 #
 # Turtle Queries 
 #
@@ -65,7 +66,6 @@ Define = 2,Control
 #
 SetBackground = 0,Display
 SetPenColor = 0,Display
-SetPenSize = 0,Display
 SetShape = 0,Display
 SetPalette = 0,Display
 GetPenColor = 0,Display
