display commands now theoretically could work

--- a/src/parser/CommandParametersMapping.properties
+++ b/src/parser/CommandParametersMapping.properties
@@ -65,11 +65,11 @@ Define = 2,Control
 # Display Commands 
 #
 SetBackground = 0,Display
-SetPenColor = 0,Display
-SetShape = 0,Display
+SetPenColor = 1,Turtle
+SetShape = 1,Turtle
 SetPalette = 0,Display
-GetPenColor = 0,Display
-GetShape = 0,Display
+GetPenColor = 0,Turtle
+GetShape = 0,Turtle
 Stamp = 0,Display
 ClearStamps = 0,Display
 #
