--- a/src/alerts/resourceKeys.properties
+++ b/src/alerts/resourceKeys.properties
@@ -16,3 +16,4 @@ URLMessageError=Could not link to commands webpage
 XMLSuccess=XML created successfully
 XMLSuccess2=XML read successfully
 
+OutOfBounds= Index Out Of Bounds
