--- a/src/alerts/resourceKeys.properties
+++ b/src/alerts/resourceKeys.properties
@@ -19,3 +19,5 @@ XMLSuccess=XML created successfully
 XMLSuccess2=XML read successfully
 
 OutOfBounds= Index Out Of Bounds
+
+PALETTETYPE=GreenPalette
